受不了webpack换成vite

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div id="root">
 
     </div>
+    <script type="module" src="/src/App.js"></script>
     <script>
-        // 这是webpack的 index.html
-        // index.html 里通常不会直接写 <script src="App.tsx">，而是通过 HtmlWebpackPlugin 自动生成的 <script src="bundle.js">，这个 bundle 是 webpack 编译后的产物
+        // 受不了webpack了 ，所以 vite默认读的这index.html 以及src下的app
     </script>
 </body>
 </html>
