--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="root">
 
     </div>
-    <script type="module" src="/src/App.js"></script>
+    <script type="module" src="/src/index.js"></script>
     <script>
         // 受不了webpack了 ，所以 vite默认读的这index.html 以及src下的app
     </script>
